--- a/index.html
+++ b/index.html
@@ -18,38 +18,160 @@
         <a class="navbar-brand" href="#">
             Golden
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavi" aria-controls="navbarNavi" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavi" aria-controls="navbarNavi"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse " id="navbarNavi">
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
                     <a class="nav-link text-uppercase" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="#">Services</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="#">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="#">About</a>
-                  </li>
-                  <li class="nav-item">
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-uppercase" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-uppercase" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-uppercase" href="#about">About</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-uppercase" href="#">Contact</a>
-                  </li>
-                </ul>
-              </div>        
+                </li>
+            </ul>
+        </div>
 
     </nav>
-    <header class="jumbotron jumbotron-fluid">
-        <div class="d-flex flex-column align-items-center justify-content-center flex-column container">
+    <header id="home" class="jumbotron jumbotron-fluid">
+        <div class="d-flex flex-column align-items-center justify-content-center container">
             <h2 class="text-center">Welcome To Our Studio!</h2>
             <h1 class="text-uppercase text-center">It’s nice to Meet you </h1>
             <button class="btn btn-default text-uppercase">Tell me more</button>
         </div>
     </header>
+
+    <section id="services" class="services container d-flex align-items-center justify-content-center flex-column">
+        <h1 class="text-uppercase">Services</h1>
+        <h3 class="text-center">Natus deleniti voluptatum dolorum repellat.</h3>
+        <div class="wrapper d-flex align-items-center justify-content-around align-self-stretch ">
+            <div class="service d-flex flex-column justify-content-center align-items-center">
+                <div class="circle">
+                    <object data="./src/Icon-Basket.svg" type=""></object>
+                </div>
+                <h4>E-commerce</h4>
+                <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus distinctio illum tempora dolorum
+                    molestias deleniti facere qui quas.</p>
+            </div>
+            <div class="service d-flex flex-column justify-content-center align-items-center">
+                <div class="circle">
+                    <object data="./src/Icon-Laptop.svg" type=""></object>
+                </div>
+                <h4>Responsive Web</h4>
+                <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus distinctio illum tempora dolorum
+                    molestias deleniti facere qui quas.</p>
+            </div>
+            <div class="service d-flex flex-column justify-content-center align-items-center">
+                <div class="circle">
+                    <object data="./src/Icon-Locked.svg" type=""></object>
+                </div>
+                <h4>Web Security</h4>
+                <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus distinctio illum tempora dolorum
+                    molestias deleniti facere qui quas.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="portfolio" class="portfolio darker-bg container-fluid d-flex align-items-center justify-content-center flex-column ">
+        <h1 class="text-uppercase">Portfolio</h1>
+        <h3 class="text-center">Natus deleniti voluptatum dolorum repellat.</h3>
+        <div class="wrapper d-flex align-items-center justify-content-around align-self-stretch flex-column  ">
+            <div class="projects container d-flex align-items-center justify-content-center align-self-stretch flex-wrap">
+                <div class="project">
+                    <img src="./src/ebony.png" alt="Ebony and ivory">
+                    <div class="details">
+                        <h4 class="text-center">Ebony & Ivory</h4>
+                        <p class="text-center">Branding</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="./src/smart.png" alt="Smart Stationery">
+                    <div class="details">
+                        <h4 class="text-center">Smart Stationary</h4>
+                        <p class="text-center">Print Design</p>
+
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="./src/poster.png" alt="Clever Poster">
+                    <div class="details">
+                        <h4 class="text-center">Clever Poster</h4>
+                        <p class="text-center">Print Design</p>
+                    </div>
+                </div>
+                <!-- </div>
+            <div class="d-flex align-items-center justify-content-center align-self-stretch"> -->
+                <div class="project">
+                    <img src="./src/vinyl.png" alt="Vinyl disc">
+                    <div class="details">
+                        <h4 class="text-center">Vinyl Record</h4>
+                        <p class="text-center">Product Mock-Up</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="./src/treehouse.png" alt="Web template">
+                    <div class="details">
+                        <h4 class="text-center">Treehouse Template</h4>
+                        <p class="text-center">Web Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="./src/burned-logo.png" alt="Logo">
+                    <div class="details">
+
+                        <h4 class="text-center">Burned Logo</h4>
+                        <p class="text-center">Branding</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about container d-flex align-items-center justify-content-center flex-column">
+        <h1 class="text-uppercase">About us</h1>
+        <h3 class="text-center">Natus deleniti voluptatum dolorum repellat.</h3>
+
+        <div class="timeline">
+            <ul>
+                <li class="timeline-item">
+                    <div class="circle">
+                        <img src="./src/desk.jpeg" alt="">
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="circle">
+                        <img src="./src/startup.jpeg" alt="">
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="circle">
+                        <img src="./src/stage.jpg" alt="">
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="circle">
+                        <img src="./src/mountains-top.jpeg" alt="">
+                    </div>
+                </li>
+                <li class="timeline-item end">
+                        <div class="circle">
+                            <p class="text-center text-uppercase">Our story continues ...</p>
+                        </div>
+                    </li>
+            </ul>
+        </div>
+    </section>
 
 
 
