ADD: "Contact us" section - begining

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
         crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
 
@@ -148,32 +149,126 @@
                     <div class="circle">
                         <img src="./src/desk.jpeg" alt="">
                     </div>
+                    <div class="content">
+                        <h4 class="text-uppercase">July 2010</h4>
+                        <h4>Our Humble Beginnings</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, fugiat! Iusto tempora rerum
+                            eum rem. Placeat perferendis porro, dolorem non neque labore.</p>
+                    </div>
                 </li>
                 <li class="timeline-item">
                     <div class="circle">
                         <img src="./src/startup.jpeg" alt="">
+                    </div>
+                    <div class="content">
+                        <h4 class="text-uppercase">January 2011</h4>
+                        <h4>Facing Startup Battles</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, fugiat! Iusto tempora rerum
+                            eum rem. Neque consectetur omnis voluptate recusandae molestiae illo, quaerat reiciendis tenetur?</p>
                     </div>
                 </li>
                 <li class="timeline-item">
                     <div class="circle">
                         <img src="./src/stage.jpg" alt="">
                     </div>
+                    <div class="content">
+                        <h4 class="text-uppercase">December 2012</h4>
+                        <h4>Enter The Dark Days</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eaque non optio nesciunt vel,
+                            eligendi enim dicta cupiditate nam esse voluptates quisquam similique quos reprehenderit!</p>
+                    </div>
                 </li>
                 <li class="timeline-item">
                     <div class="circle">
                         <img src="./src/mountains-top.jpeg" alt="">
                     </div>
+                    <div class="content">
+                        <h4 class="text-uppercase">February 2014</h4>
+                        <h4>Our Triumph</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto excepturi beatae ducimus, rem
+                            porro, doloribus iste, vitae asperiores harum doloremque id quidem velit. Voluptatum officia
+                            sunt impedit omnis.</p>
+                    </div>
                 </li>
                 <li class="timeline-item end">
-                        <div class="circle">
-                            <p class="text-center text-uppercase">Our story continues ...</p>
-                        </div>
-                    </li>
+                    <div class="circle">
+                        <p class="text-center text-uppercase">Our story continues ...</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
 
+    <section id="team" class="team darker-bg container-fluid d-flex align-items-center justify-content-center flex-column">
+        <h1 class="text-uppercase text-center">Our amazing team</h1>
+        <h3 class="text-center">Natus deleniti voluptatum dolorum repellat.</h3>
+        <div class="wrapper container d-flex align-items-center justify-content-around align-self-stretch ">
+            <!-- <div class="persons d-flex flex-row justify-content-center align-items-center"> -->
+            <div class="person d-flex flex-column justify-content-center align-items-center">
+                <div class="photo">
+                    <img src="./src/marketer.jpg" alt="">
+                </div>
+                <h5 class="name">Kimberly Thompson</h5>
+                <h6 class="function">Marketer</h6>
+                <div class="social-media d-flex align-items-center justify-content-center align-self-stretch">
+                    <div class="social twitter">
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                    <div class="social facebook">
+                        <i class="fab fa-facebook-f fa-lg"></i>
+                    </div>
+                    <div class="social pinterest">
+                        <i class="fab fa-pinterest-p"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="person d-flex flex-column justify-content-center align-items-center">
+                <div class="photo">
+                    <img src="./src/coder.jpg" alt="">
+                </div>
+                <h5 class="name">Rico Massimo</h5>
+                <h6 class="function">Coder</h6>
+                <div class="social-media d-flex align-items-center justify-content-center align-self-stretch">
+                    <div class="social twitter">
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                    <div class="social facebook">
+                        <i class="fab fa-facebook-f fa-lg"></i>
+                    </div>
+                    <div class="social googleplus">
+                        <i class="fab fa-google-plus-g"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="person d-flex flex-column justify-content-center align-items-center">
+                <div class="photo">
+                    <img src="./src/graphic.jpg" alt="">
+                </div>
+                <h5 class="name">Uku Mason</h5>
+                <h6 class="function">Graphic Designer</h6>
+                <div class="social-media d-flex align-items-center justify-content-center align-self-stretch">
+                    <div class="social facebook">
+                        <i class="fab fa-facebook-f fa-lg"></i>
+                    </div>
+                    <div class="social pinterest">
+                        <i class="fab fa-pinterest-p"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="description">
+            <p class="text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque necessitatibus illo maxime culpa nesciunt magni molestias
+                sit natus eaque dolorem?
+            </p>
+        </div>
 
+    </section>
+
+    <section id="contact" class="contact container-fluid d-flex align-items-center justify-content-center flex-column">
+        <h1 class="text-uppercase text-white">Contact US</h1>
+        <h3 class="text-center">Nisi, nesciunt maiores. Delectus accusamus facilis maxime.</h3>
+    </section>
 
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
