--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="d-flex flex-column align-items-center justify-content-center container">
             <h2 class="text-center">Welcome To Our Studio!</h2>
             <h1 class="text-uppercase text-center">It’s nice to Meet you </h1>
-            <button class="btn btn-default text-uppercase">Tell me more</button>
+            <button class="btn btn-yellow btn-default text-uppercase">Tell me more</button>
         </div>
     </header>
 
@@ -266,9 +266,51 @@
     </section>
 
     <section id="contact" class="contact container-fluid d-flex align-items-center justify-content-center flex-column">
-        <h1 class="text-uppercase text-white">Contact US</h1>
+        <h1 class="text-uppercase text-white text-center">Contact US</h1>
         <h3 class="text-center">Nisi, nesciunt maiores. Delectus accusamus facilis maxime.</h3>
+        <div class="container ">
+            <form class="form">
+                <div class="wrapper d-flex align-items-center justify-content-center w-100">
+                    <div class="form-column w-100">
+                        <div class="form-group">
+                            <input class="text-uppercase" type="text" placeholder="Your name *">
+                        </div>
+                        <div class="form-group">
+                            <input class="text-uppercase" type="text" placeholder="Your email *">
+                        </div>
+                        <div class="form-group">
+                            <input class="text-uppercase" type="text" placeholder="Subject">
+                        </div>
+                    </div>
+                    <div class="form-column w-100">
+                        <div class="form-group">
+                            <textarea class="text-uppercase" placeholder="Your message *"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-yellow btn-default text-uppercase mx-auto d-block ">Send message</button>
+            </form>
+        </div>
     </section>
+
+    <footer class="container d-flex ">
+        <p>© Copyright 2014 FreebiesExpress</p>
+        <div class="social-media d-flex align-items-center justify-content-center align-self-stretch mx-auto">
+            <div class="social twitter">
+                <i class="fab fa-twitter"></i>
+            </div>
+            <div class="social facebook">
+                <i class="fab fa-facebook-f fa-lg"></i>
+            </div>
+            <div class="social pinterest">
+                <i class="fab fa-pinterest-p"></i>
+            </div>
+            <div class="social googleplus">
+                <i class="fab fa-google-plus-g"></i>
+            </div>
+        </div>
+
+    </footer>
 
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
