--- a/index.html
+++ b/index.html
@@ -265,6 +265,23 @@
 
     </section>
 
+    <section id="logos" class="logos container d-flex justify-content-center align-content-center flex-wrap">
+        <div class="logo">
+            <img src="./src/Envato.png" alt="">
+        </div>
+        <div class="logo">
+
+            <img src="./src/WordPress.png" alt="">
+        </div>
+        <div class="logo">
+            <img src="./src/Tuts.png" alt="">
+        </div>
+        <div class="logo">
+            <img src="./src/Microlancer.png" alt="">
+        </div>
+    </section>
+
+
     <section id="contact" class="contact container-fluid d-flex align-items-center justify-content-center flex-column">
         <h1 class="text-uppercase text-white text-center">Contact US</h1>
         <h3 class="text-center">Nisi, nesciunt maiores. Delectus accusamus facilis maxime.</h3>
